# langdetect

./: .test.json  CMakeLists.txt  README-Español.md  README.md  fix_vs_proj.ps1
doc/: UWP.md
include/: gui.h  langdetect.h  unistd.h
include/beos/: beos_gui.h  beos_init.h
include/gtk/: gtk_gui.h
include/osx/: gui_osx.h  init_osx.h  osx_gui.h  osx_init.h
include/osx-carbon/: carbon_gui.h
include/qt/: qt_gui.h  qt_init.h
include/windows/: unistd.h  windows_gui.h
include/windows-uwp/: App.xaml.h  MainPage.xaml.h  langdetect-uap.h  langdetect-uwp.h  pch.h  str-utils.h
interfacebuilder/: Info.plist  MainMenu.xib
osx/: MainMenu.nib  MainMenu.xib
osx/main.nib/: info.nib  objects.xib
qt/: mainwindow.ui
src/: gui.c  gui_osx.m  init_osx.m  langdetect.c  main.c
src/beos/: beos_gui.cpp  beos_init.cpp
src/gtk/: gtk_gui.c  gtk_ui.c
src/osx/: gui_osx.m  init_osx.m  osx_gui.m  osx_init.m
src/osx-carbon/: carbon_gui.c
src/qt/: qt_gui.cpp  qt_init.cpp
src/windows/: windows_gui.c
src/windows-uwp/: App.xaml  App.xaml.cpp  MainPage.xaml  MainPage.xaml.cpp  Package.appxmanifest  langdetect-uap.cpp  langdetect-uwp.cpp  str-utils.cpp
