cmake_minimum_required (VERSION 2.6)
project (langdetect)
if (WIN32)
	set (HEADER_FILES include/gui.h include/langdetect.h include/windows/windows_gui.h)
	set (SRC_FILES src/main.c src/langdetect.c src/gui.c src/windows/windows_gui.c)
elseif (APPLE)
	set (SRC_FILES src/main.c src/langdetect.c src/gui.c src/osx/osx_init.m
		src/osx/osx_gui.m)
	set (HEADER_FILES include/gui.h include/langdetect.h include/osx/osx_init.h include/osx/osx_gui.h)
	set (IB_FILES osx/MainMenu.nib)
	set (OSX_BUNDLE MACOSX_BUNDLE)

	set (CMAKE_C_FLAGS "-x objective-c")
	set(CMAKE_EXE_LINKER_FLAGS "-framework Cocoa -framework AppKit -framework Foundation")
elseif(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
	include (FindPkgConfig)
	pkg_search_module (GTK REQUIRED gtk+-2.0)
	add_definitions (-DGTK_UI)
	include_directories (${GTK_INCLUDE_DIRS})
	set (HEADER_FILES include/gui.h include/langdetect.h include/gtk/gtk_gui.h)
	set (SRC_FILES src/main.c src/langdetect.c src/gui.c src/gtk/gtk_gui.c)
elseif(${CMAKE_SYSTEM_NAME} MATCHES "Haiku")
	add_definitions (-DHAIKU_OS)
	set (HEADER_FILES include/gui.h include/langdetect.h include/beos/beos_gui.h include/beos/beos_init.h)
	set(SRC_FILES src/main.c src/langdetect.c src/gui.c src/beos/beos_gui.cpp src/beos/beos_init.cpp)
	
endif()

include_directories(./include)
add_executable (langdetect ${OSX_BUNDLE} ${SRC_FILES} ${HEADER_FILES} ${IB_FILES})

if (APPLE)
	set_source_files_properties (${IB_FILES} PROPERTIES MACOSX_PACKAGE_LOCATION Resources)
	set_target_properties (langdetect PROPERTIES MACOSX_BUNDLE_INFO_PLIST ${CMAKE_CURRENT_LIST_DIR}/osx/Info.plist)
elseif (${CMAKE_SYSTEM_NAME} MATCHES "Haiku")
	# This is kind of a hack to fix issues with adding Haiku's C++ headers to our existing C code
	# Compiling everything as C++ makes things easier. 
	set_source_files_properties(src/main.c PROPERTIES LANGUAGE CXX)
	set_source_files_properties(src/gui.c PROPERTIES LANGUAGE CXX)
	set_source_files_properties(src/langdetect.c PROPERTIES LANGUAGE CXX)
endif()
if (${CMAKE_SYSTEM_NAME} MATCHES "Linux")
	target_link_libraries (langdetect m ${GTK_LDFLAGS})
endif()

if (${CMAKE_SYSTEM_NAME} MATCHES "Haiku")
	target_link_libraries(langdetect be)
endif()

if (NOT APPLE)
	file (COPY ${DICTIONARIES} DESTINATION .)
endif()
